--- a/tutors-project/package.json
+++ b/tutors-project/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
